Adding module questionnaire endpoints
