# flask_app/module_questionnaire/routes.py
@@ -1,0 +1,4 @@
+from flask import Blueprint
+
+module_questionnaire_bp = Blueprint("module_questionnaire", __name__, url_prefix="/api")
+# Define your routes here
